src/core-crm/main/default/objects/WMA_Place__c/WMA_Place__c.object-meta.xml
<CustomObject>
    <description>Place Description.</description>
    <label>Place</label>
    <nameField>
        <displayFormat>place-{00000}</displayFormat>
        <label>Place Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Places</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>