src/core-crm/main/default/objects/WMA_Place__c/fields/WMA_Doman_X_Field__c.field-meta.xml
<CustomField>
    <fullName>WMA_Doman_X_Field__c</fullName>
    <label>Doman X Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>