src/core-crm/main/default/objects/WMA_Place__c/fields/WMA_Map_Place_Name__c.field-meta.xml
<CustomField>
    <fullName>WMA_Map_Place_Name__c</fullName>
    <label>Map Place Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>