src/core-crm/main/default/objects/WMA_Place__c/fields/WMA_TestRequiredField__c.field-meta.xml
<CustomField>
    <fullName>WMA_TestRequiredField__c</fullName>
    <description>Test</description>
    <label>TestRequiredField</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>