src/core-crm/main/default/objects/WMA_Place__c/fields/WMA_TestRequiredFieldAgain__c.field-meta.xml
<CustomField>
    <fullName>WMA_TestRequiredFieldAgain__c</fullName>
    <label>TestRequiredFieldAgain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>