src/core-crm/main/default/objects/WMA_Place__c/fields/WMA_Traditional_Place_Name__c.field-meta.xml
<CustomField>
    <fullName>WMA_Traditional_Place_Name__c</fullName>
    <description>Traditional Place Name of this location. Country name.</description>
    <label>Traditional Place Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>